# tauri-plugin-polodb

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
.github/workflows/: publish.yml
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: count_documents.toml  delete_many.toml  drop_collection.toml  inser_one.toml  insert_many.toml  list_collection_names.toml  update_many.toml
permissions/schemas/: schema.json
scripts/: force_tag.sh
src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs
tests/: test_polodb.rs
