[package]
name = "tauri-plugin-polodb"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-polodb"

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
thiserror = "2"
polodb_core = "5.1.4"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
