[package]
authors = ["You"]
description = ""
edition = "2021"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-polodb"
name = "tauri-plugin-polodb"
rust-version = "1.77.2"
version = "0.1.0"

[dependencies]
polodb_core = "5.1.4"
serde = "1.0"
tauri = {version = "2.7.0"}
thiserror = "2"

[build-dependencies]
tauri-plugin = {version = "2.3.1", features = ["build"]}

[[test]]
name = "polodb"
path = "tests/test_polodb.rs"
