[package]
authors = ["liuhuo23 <liuhuo2370@gmai.com>"]
description = "一个简的易的 Tauri 插件，用于在 Tauri 应用中使用 Polodb 数据库。"
edition = "2021"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-polodb"
name = "tauri-plugin-polodb"
rust-version = "1.77.2"
version = "0.1.0"

[dependencies]
polodb_core = "5.1.4"
serde = "1.0"
tauri = {version = "^2"}
thiserror = "2"

[build-dependencies]
tauri-plugin = {version = "^2", features = ["build"]}

[[test]]
name = "polodb"
path = "tests/test_polodb.rs"
